--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Basicwebpage</h1>
-        <h2>Our first web page</h2>
+        <h1>Mohamed Abdi</h1>
+        <h2>My email address is: <a href="mail to: mabdi@me.com">mabdi@me.com</a></h2>
         <a href="https://github.com/warfahas/basicwebpage" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
