--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Mohamed Abdi</h1>
-        <h2>My email address is: mabdi@me.com</h2>
+        <h2>My email address is: mabdi@me.com.</h2>
         <a href="https://github.com/warfahas/basicwebpage" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
