--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+          <!-- Change all the h3s to regular hrs, and they should match this outline:
+1. Objective or Summary, 2. Experience, 3. Education, 4. Skills -->
           <h3>
 <a id="welcome-to-our-basic-web-site" class="anchor" href="#welcome-to-our-basic-web-site" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to our basic web site.</h3>
 
