--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <p><b>Computer Skills</b>: Microsoft Word, Excel and Powerpoint.</p>
 
-<h3>Contact Information</h3>
+<h3>References</h3>
 
           <p><b>Phone Number</b>: (314) 555-5555.<br>
             <b>E-mail Address</b>: mabdi@me.com</p>
